Solved some issues using evaluation tool

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <article class="card-body-main">
                 <h2>LOREM IPSUM DOLOR SIT AMET - Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt ut labore et dolore magna aliqua</h2>
-                <p style="color: #857d7d; font-size: 1.2em; ">Pharetra pellentesque porttitor mollis mollis ut praesent fames dignissim proin
+                <p style="color: #a8a7a7; font-size: 1.2em; ">Pharetra pellentesque porttitor mollis mollis ut praesent fames dignissim proin
                     mi sagittis lorem consequat.</p>
                 <button class="bookmark-btn">
                     <span>Bookmark</span>
@@ -170,7 +170,7 @@
                     </button>
                 </article>
                 <figure class="col-md-7">
-                    <img src="assets/placeholder1000x600.jpg" class="card-img-top img-fluid" alt="Notizia">
+                    <img src="assets/placeholder1000x600.jpg" class="card-img-top img-fluid" alt="Big news">
                 </figure>
             </article>
             <!-- news row 1-->
@@ -363,7 +363,7 @@
                     </button>
                 </article>
                 <figure class="col-md-7">
-                    <img src="assets/placeholder1000x600.jpg" class="card-img-top img-fluid" alt="Notizia">
+                    <img src="assets/placeholder1000x600.jpg" class="card-img-top img-fluid" alt="Big news">
                 </figure>
             </article>
             <!-- news row 1-->
@@ -655,7 +655,7 @@
                 <!-- main component -->
                     <article class="citation-wrapper">
                         <figure class="citation-image">
-                            <img src="assets/placeholder80x100.jpg" alt="citation image" class="citation-image__img">
+                            <img src="assets/placeholder80x100.jpg" alt="decoration" class="citation-image__img">
                         </figure>
                         <p class="citation-subtitle">sit amet, consectetur adipiscing elit</p>
                     </article>
@@ -671,7 +671,7 @@
                 <!-- main component -->
                 <article class="citation-wrapper">
                     <figure class="citation-image">
-                        <img src="assets/placeholder80x100.jpg" alt="citation image" class="citation-image__img">
+                        <img src="assets/placeholder80x100.jpg" alt="decoration" class="citation-image__img">
                     </figure>
                     <p class="citation-subtitle">sit amet, consectetur adipiscing elit</p>
                 </article>
@@ -687,7 +687,7 @@
                 <!-- main component -->
                 <article class="citation-wrapper">
                     <figure class="citation-image">
-                        <img src="assets/placeholder80x100.jpg" alt="citation image" class="citation-image__img">
+                        <img src="assets/placeholder80x100.jpg" alt="decoration" class="citation-image__img">
                     </figure>
                     <p class="citation-subtitle">sit amet, consectetur adipiscing elit</p>
                 </article>
@@ -703,7 +703,7 @@
                 <!-- main component -->
                 <article class="citation-wrapper">
                     <figure class="citation-image">
-                        <img src="assets/placeholder80x100.jpg" alt="citation image" class="citation-image__img">
+                        <img src="assets/placeholder80x100.jpg" alt="decoration" class="citation-image__img">
                     </figure>
                     <p class="citation-subtitle">sit amet, consectetur adipiscing elit</p>
                 </article>
@@ -725,7 +725,7 @@
                     </button>
                 </article>
                 <figure class="col-md-7">
-                    <img src="assets/placeholder1000x600.jpg" class="card-img-top img-fluid" alt="Notizia">
+                    <img src="assets/placeholder1000x600.jpg" class="card-img-top img-fluid" alt="Big news">
                 </figure>
             </article>
             <!-- news row 1-->
@@ -794,7 +794,7 @@
                     <article class="card-body-main">
                         <h2>LOREM IPSUM DOLOR SIT AMET - Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                             incididunt ut labore et dolore magna aliqua</h2>
-                        <p style="color: #857d7d; font-size: 1.2em; ">Pharetra pellentesque porttitor mollis mollis ut praesent fames dignissim proin
+                        <p style="color: #a8a7a7; font-size: 1.2em; ">Pharetra pellentesque porttitor mollis mollis ut praesent fames dignissim proin
                             mi sagittis lorem consequat.</p>
                         <button class="bookmark-btn">
                             <span>Bookmark</span>
@@ -1107,19 +1107,19 @@
 <section>
     <!-- search popup -->
     <section id="searchPopup" class="popup-box-search">
-        <form class="d-flex">
+        <div class="d-flex">
             <input class="form-control me-2" type="search" placeholder="Cerca...">
             <button class="btn btn-primary" type="submit">Vai</button>
-        </form>
+        </div>
     </section>
 
     <!-- login popup -->
     <section id="registerPopup" class="popup-box-login">
-        <form>
+        <div>
             <label for="emailInput" class="form-label">Inserisci email:</label>
             <input type="email" class="form-control mb-2" id="emailInput" placeholder="email@example.com" required>
             <button type="submit" class="btn btn-primary w-100">Invia</button>
-        </form>
+        </div>
     </section>
 </section>
 
